--- a/src/scss/variabless.scss
+++ b/src/scss/variabless.scss
@@ -1,6 +1,9 @@
 // Colors
 $color-white: #fff;
 $color-black: #000;
+$color-gray: #eee;
+$color-gray-dark: #d2d2d2;
+$color-orange: #ff7000;
 
 // Sizes
 $desktop: 992px;
@@ -8,4 +11,4 @@ $tablet: 767px;
 $mobile: 580px;
 
 // Animation
-$transition-base: all 0.25s ease-out;
+$transition-base: all 0.25s ease-in;
