--- a/static/global.css
+++ b/static/global.css
@@ -4,6 +4,8 @@ body {
 	font-size: 14px;
 	line-height: 1.5;
 	color: #333;
+	background: #eee;
+	overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -27,10 +29,4 @@ code {
 	background-color: #f0f0f0;
 	padding: 0.2em 0.4em;
 	border-radius: 2px;
-}
-
-@media (min-width: 400px) {
-	body {
-		font-size: 16px;
-	}
 }
